--- a/css/index.css
+++ b/css/index.css
@@ -9,8 +9,9 @@ body{
 	border-color: orange;
 	background-color: orange;
 	border-radius: 25px;
-	margin-left: 40%;
-	margin-right: 40%;
+	margin-left: 30%;
+	margin-right: 30%;
+	font-size: 30px;
 }
 .button a{
 	margin: 10% 10% 10% 10%;
